# mlops_nlp_spam_classification

./: Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt  test.py
.virtual_documents/src/monitoring/: monitor.ipynb
config/: config.yaml  local.yaml
data/: text_batch.csv
integration/: storage.py
notebook/: NLP_spam_notebook.ipynb  model.joblib
outputs/evaluate/: eval_metadata.json  evaluation_metrics.json  full_pipeline.pkl  output.pkl
outputs/models/: trained_output.pkl
outputs/raw/: test.csv  train.csv
outputs/registry/: latest_deployment.json  latest_experiment.json
outputs/transformed/: transformed.pkl
outputs/user_app/history/: predictions.csv
pipelines/: deployment_pipeline.py  experiment_pipeline.py  monitoring_pipeline.py  training_pipeline.py
src/components/: data_ingestion.py  data_transformation.py  model_evaluation.py  model_trainer.py
src/deployment/: deploy.py  deployment_manager.py  traffic_router.py
src/experiment/: experiment_manager.py  experiment_tracker.py
src/mlops/: governance.py
src/monitor/: monitoring.py
src/serving/: data.csv  serving.py
templates/: index.html
utils/: artifact_manager.py  audit_logger.py  config_manager.py  logger.py  metadata.py  results.py
